--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
 jobs:
   build:
     name: Build Web Assembly Artifact
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Install Dependencies
         run: pip install -r requirements.txt
