--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         run: ls -l
 
       - name: Install Dependencies
-        run: pip install -r ./valos-run/requirements.txt
+        run: pip install -r ./requirements.txt
 
       - name: Build web assembly
-        run: pygbag valos-run
+        run: pygbag .
