--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Build web assembly
         run: pygbag --build .
 
+      - name: Adjust screen X size reference
+        run: sed -i '' 's/REFX = 1980/REFX = 640/' ./build/web/index.html
+
+      - name: Adjust screen Y size reference
+        run: sed -i '' 's/REFY = 1080/REFX = 480/' ./build/web/index.html  
+
       - name: Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
