--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,13 @@ jobs:
         run: sed -i 's/REFX = 1980/REFX = 640/' ./build/web/index.html
 
       - name: Adjust screen Y size reference
-        run: sed -i 's/REFY = 1080/REFY = 480/' ./build/web/index.html  
+        run: sed -i 's/REFY = 1080/REFY = 480/' ./build/web/index.html
+
+      - name: Adjust screen X size height
+        run: sed -i 's/HEIGHT=600/HEIGHT=480/' ./build/web/index.html  
+
+      - name: Adjust screen Y size width
+        run: sed -i 's/WIDTH=1024/WIDTH=640/' ./build/web/index.html
 
       - name: Deploy
         id: builddeploy
